# DailyRoutine-SC

./: .prettierrc.json  Cargo.toml  README.md  deploy.sh
neardev/: dev-account  dev-account.env
src/: lib.rs
